[package]
name = "piper-plus-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM phonemizer for Piper Plus TTS — 8-language G2P with bundled NAIST-JDIC dictionary"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
multilingual = ["ja", "zh", "ko", "es", "fr", "pt", "sv"]
multilingual-external = ["ja-external", "zh-external", "ko", "es", "fr", "pt", "sv"]
# ja: Bundle NAIST-JDIC dictionary via include_bytes!() (~30 MB added to WASM binary).
# Dictionary is immediately available at construction time.
ja = ["piper-plus-g2p/naist-jdic"]
# ja-external: Enable JA G2P code but load dictionary at runtime via setJapaneseDictionary().
# Dictionary is NOT bundled -- caller must provide serialized dict bytes. Keeps WASM binary small.
ja-external = ["piper-plus-g2p/japanese"]
# zh: Enable ZH G2P code with Chinese pinyin dictionary support.
# Starts as PassthroughPhonemizer; caller loads dictionaries via setChineseDictionary().
# (Unlike JA, Chinese dicts are JSON-based and loaded at runtime in both modes.)
zh = ["piper-plus-g2p/chinese"]
# zh-external: Same as zh -- enable ZH G2P code, load dictionaries at runtime.
# Kept as a separate feature for symmetry with ja/ja-external naming convention.
zh-external = ["piper-plus-g2p/chinese"]
# ko/es/fr/pt/sv: Enable dedicated rule-based G2P for each language.
# When disabled, that language falls back to PassthroughPhonemizer (character-level tokenization).
# These features have no Cargo dependencies because the G2P logic is pure Rust.
ko = []
es = []
fr = []
pt = []
sv = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
piper-plus = { path = "../piper-core", version = "0.4.0", default-features = false }
piper-plus-g2p = { path = "../piper-plus-g2p", version = "0.4.0", default-features = false }
web-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# wasm-pack build --release uses the standard [profile.release] from the
# workspace Cargo.toml for Rust compiler flags, plus [package.metadata.wasm-pack.profile.release]
# below for the post-build wasm-opt pass.
#
# wasm-opt: '-Os' balances size and speed. The binary is 96% dictionary data
# (NAIST-JDIC), so code-level optimization has minimal impact on total size.
# '-Oz' would degrade runtime performance for negligible size savings.
# '-O3' would optimize speed but slightly increase code size.

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
